--- a/little-snitch-install.html
+++ b/little-snitch-install.html
@@ -6,27 +6,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
-    <title>Home - ihaveprivacy</title>
-
-    <link rel="canonical" href="https://ihaveprivacy.com/">
-    <meta property="og:locale" content="en_US">
-    <meta property="og:type" content="website">
-    <meta property="og:title" content="Home - ihaveprivacy">
-    <meta property="og:url" content="https://ihaveprivacy.com/">
-    <meta property="og:site_name" content="ihaveprivacy">
-    <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:creator" content="@ihaveprivacy">
-    <meta name="twitter:site" content="@ihaveprivacy">
+    <title>ph00lt0 - blocklist installation for Little Snitch</title>
+	
     <script>
 	window.location.href="x-littlesnitch:subscribe-rules?url=https://raw.githubusercontent.com/ph00lt0/blocklist/master/little-snitch-blocklist.lsrules"
     </script>
 </head>
 
 <body>
-<div>
-    <img src="../logo_text.png" width="200px">
-    <p>Installing blocklist...</p>
-    <p>Little Snitch should open now or click open in app, else follow manual instructions</p>
+<a target="_blank" href="x-littlesnitch:subscribe-rules?url=https://raw.githubusercontent.com/ph00lt0/blocklist/master/little-snitch-blocklist.lsrules">
+  Click here to install the blocklist
+</a>,  else follow manual instructions
 </div>
 </body>
 </html>
