--- a/install.html
+++ b/install.html
@@ -12,6 +12,6 @@
 <body>
     <a target="_blank" href="abp:subscribe?location=https%3A%2F%2Fraw.githubusercontent.com%2Fph00lt0%2Fblocklist%2Fmaster%2Fblocklist.txt&title=ph00lt0%20-%20blocklist" title="ph00lt0 - blocklist">
   Click here to install the blocklist
-    </a>
+    </a>,  else follow manual instructions
 </body>
 </html>
